Refactor: "예약 일자로 조회 기능 수정"
1. LocalDateTime 형식으로 인해 시간까지 정확히 일치하지 않으면 조회되지 않던 문제 해결

Resolve: #194